--- a/_posts/2024-11-02-draft-test-3.md
+++ b/_posts/2024-11-02-draft-test-3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Project Update draft test 3"
+title: "Test post"
 published: true
 ---
 
-This is a test draft that will be published. 
+This is a test post for the blog. 
